<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#D1BEA4"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/addTaskTextView"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="monospace"
        android:text="@string/add_task"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="347dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="234dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:text="@string/do_something" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="348dp"
        android:layout_height="61dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:text="@string/my_task" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addTaskAddTaskButton"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#B1DDE1"
        android:text="@string/add_task"
        android:textColor="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/addTaskTaskCounterTextView"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="72dp"
        android:text="@string/total_tasks_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addTaskSubmitTextView"
        android:layout_width="72dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="168dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addTaskAddTaskButton" />

</androidx.constraintlayout.widget.ConstraintLayout>